--- a/task-1.ipynb
+++ b/task-1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMWGYwtmW9MVjI/L0lf1y+Q",
+      "authorship_tag": "ABX9TyPX5M0A8oed/6DdTvDsz59f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,92 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "По тропинке вдоль кустов\n",
+        "Шли 11 хвостов.\n",
+        "Сосчитать я также смог,\n",
+        "Что шагало 30 ног.\n",
+        "Это вместе шли куда-то\n",
+        "Петухи и поросята.\n",
+        "А теперь вопрос таков:\n",
+        "Сколько было петухов?\n",
+        "И узнать я был бы рад,\n",
+        "Сколько было поросят?"
+      ],
       "metadata": {
-        "id": "4y2ollB64z54"
+        "id": "DuYAhYrl5HvS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install z3-solver"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XLq0zdcq6IfH",
+        "outputId": "154a5ff0-aba5-49cb-fc63-eeb345adbb4d"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting z3-solver\n",
+            "  Downloading z3_solver-4.15.1.0-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (602 bytes)\n",
+            "Downloading z3_solver-4.15.1.0-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (29.5 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m29.5/29.5 MB\u001b[0m \u001b[31m30.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: z3-solver\n",
+            "Successfully installed z3-solver-4.15.1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from z3 import *"
+      ],
+      "metadata": {
+        "id": "njjs3tN26QVQ"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "chickenCount, pigCount = Ints('chickenCount pigCount')\n",
+        "equations = [\n",
+        "    chickenCount * 2 + pigCount * 4 == 30,\n",
+        "    chickenCount + pigCount == 11,\n",
+        "    chickenCount >= 1,\n",
+        "    pigCount >= 1\n",
+        "]\n",
+        "solve(equations)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GzcwprTN5UjV",
+        "outputId": "5cc073dd-06de-4f3c-8a87-be0a67247eae"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[pigCount = 4, chickenCount = 7]\n"
+          ]
+        }
+      ]
     }
   ]
 }
