--- a/task-1.ipynb
+++ b/task-1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBgvQCWEzYbHuyT69XrWfs",
+      "authorship_tag": "ABX9TyOTpGTzvyGG8vVZhxo9ng7+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,9 +55,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XLq0zdcq6IfH",
-        "outputId": "154a5ff0-aba5-49cb-fc63-eeb345adbb4d"
+        "outputId": "dd36ef9b-9579-4b2c-9994-71f82a964896"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,7 +66,7 @@
             "Collecting z3-solver\n",
             "  Downloading z3_solver-4.15.1.0-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (602 bytes)\n",
             "Downloading z3_solver-4.15.1.0-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (29.5 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m29.5/29.5 MB\u001b[0m \u001b[31m30.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m29.5/29.5 MB\u001b[0m \u001b[31m66.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: z3-solver\n",
             "Successfully installed z3-solver-4.15.1.0\n"
           ]
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "njjs3tN26QVQ"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -101,9 +101,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GzcwprTN5UjV",
-        "outputId": "5cc073dd-06de-4f3c-8a87-be0a67247eae"
+        "outputId": "e26e924b-0b84-4a38-8e71-95e82917e321"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -136,23 +136,101 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 216
+          "base_uri": "https://localhost:8080/"
         },
         "id": "laVYzFT--XTF",
-        "outputId": "e9a5be07-ff33-4ca6-c00e-3b33624953bd"
+        "outputId": "9ae5228f-86a8-4500-a31a-09d604381732"
       },
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'Ints' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1-183459916.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mInts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'a b c'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m solve(\n\u001b[1;32m      3\u001b[0m     \u001b[0ma\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0ma\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mc\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'Ints' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[b = 22, c = 34, a = 44]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "На рычаг длиной 2 метра на одно плечо на расстоянии 0.5 м от опоры положили груз массой 4 кг. На каком расстоянии от опоры на другом плече нужно положить груз массой 2 кг, чтобы рычаг был в равновесии?"
+      ],
+      "metadata": {
+        "id": "J74eEZgw_FuV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from z3 import *\n",
+        "\n",
+        "m1, m2, l1, l2 = Reals('m1 m2 l1 l2')\n",
+        "\n",
+        "solve(\n",
+        "    m1 * l1 == m2 * l2,  # правило рычага\n",
+        "    m1 == 4,\n",
+        "    m2 == 2,\n",
+        "    l1 == 0.5,\n",
+        "    l2 > 0\n",
+        ")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eRGnMY07_GS3",
+        "outputId": "8b8cbb8f-e8eb-4880-ee80-b83366b2c44f"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[m2 = 2, l2 = 1, l1 = 1/2, m1 = 4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Смешивают 2 литра воды при температуре 80 °C и некоторое количество воды при температуре 20 °C. В результате получается смесь температурой 60 °C. Сколько литров холодной воды добавили?"
+      ],
+      "metadata": {
+        "id": "76j1NOuW_QMV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "V1, V2, T1, T2, T = Reals('V1 V2 T1 T2 T')\n",
+        "\n",
+        "solve(\n",
+        "    V1 * T1 + V2 * T2 == (V1 + V2) * T,\n",
+        "    V1 == 2,\n",
+        "    T1 == 80,\n",
+        "    T2 == 20,\n",
+        "    T == 60,\n",
+        "    V2 > 0\n",
+        ")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yj8S7AHV_RAS",
+        "outputId": "261ca2d1-00e7-4dbe-dd64-1a660cb5be61"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[V1 = 2, T1 = 80, T = 60, V2 = 1, T2 = 20]\n"
           ]
         }
       ]
