--- a/task-1.ipynb
+++ b/task-1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTpGTzvyGG8vVZhxo9ng7+",
+      "authorship_tag": "ABX9TyMO3Cj7yxeGysPQMWWkct0u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -234,6 +234,194 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Chat GPT solutions**"
+      ],
+      "metadata": {
+        "id": "K8wVN1b4ANS7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Классическая головоломка. У вас имеется 100 долларов, и вы можете купить 100 животных. Собаки стоят по 15 долларов, коты по 1 доллару, мыши по 25 центов. Вы должны купить хотя бы по одному животному каждого вида. Найдите решение этого паззла."
+      ],
+      "metadata": {
+        "id": "lPEiFNBMAUnB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from z3 import *\n",
+        "\n",
+        "x, y, z = Ints('x y z')\n",
+        "\n",
+        "solver = Solver()\n",
+        "solver.add(\n",
+        "    x + y + z == 100,\n",
+        "    15 * x + y + 0.25 * z == 100,\n",
+        "    x >= 1,\n",
+        "    y >= 1,\n",
+        "    z >= 1\n",
+        ")\n",
+        "\n",
+        "if solver.check() == sat:\n",
+        "    model = solver.model()\n",
+        "    print(f\"Собаки: {model[x].as_long()}, Коты: {model[y].as_long()}, Мыши: {model[z].as_long()}\")\n",
+        "else:\n",
+        "    print(\"Решений нет\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-qolaAQgAXH0",
+        "outputId": "c1497805-6a98-4719-f015-98f16e4e0dbf"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Собаки: 3, Коты: 41, Мыши: 56\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Один из классических типов головоломок -- это нахождение цифр, соответствующих буквам словесного выражения. Например, имеется выражение send + more = money, и надо вместо букв подставить подходящие цифры (одинаковые буквы -- это одинаковые цифры), чтобы оно получилось истинным."
+      ],
+      "metadata": {
+        "id": "5n4kE-ABAm4j"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from z3 import *\n",
+        "\n",
+        "# Объявляем переменные\n",
+        "S, E, N, D, M, O, R, Y = Ints('S E N D M O R Y')\n",
+        "\n",
+        "# Все переменные — цифры от 0 до 9\n",
+        "digits = [S, E, N, D, M, O, R, Y]\n",
+        "\n",
+        "solver = Solver()\n",
+        "solver.add([And(d >= 0, d <= 9) for d in digits])\n",
+        "solver.add(Distinct(digits))  # все буквы — разные цифры\n",
+        "\n",
+        "# Условие: S и M ≠ 0\n",
+        "solver.add(S != 0, M != 0)\n",
+        "\n",
+        "# Основное уравнение:\n",
+        "send = 1000*S + 100*E + 10*N + D\n",
+        "more = 1000*M + 100*O + 10*R + E\n",
+        "money = 10000*M + 1000*O + 100*N + 10*E + Y\n",
+        "\n",
+        "solver.add(send + more == money)\n",
+        "\n",
+        "# Проверим решение\n",
+        "if solver.check() == sat:\n",
+        "    model = solver.model()\n",
+        "    result = {str(d): model[d].as_long() for d in digits}\n",
+        "    print(\"Решение:\")\n",
+        "    for k in sorted(result):\n",
+        "        print(f\"{k} = {result[k]}\")\n",
+        "else:\n",
+        "    print(\"Решения нет\")\n"
+      ],
+      "metadata": {
+        "id": "iA1uYB8NAmCZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 8.3. Восемь ферзей\n",
+        "Ещё одна классическая задачка, которую очень любят решать на курсах по функциональному и декларативному программированию. На шахматной доске надо расставить восемь ферзей так, чтобы никто друг друга не атаковал."
+      ],
+      "metadata": {
+        "id": "pBRMw6vVApLP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from z3 import *\n",
+        "\n",
+        "# Один ферзь в каждой строке: переменные — столбцы (0–7) для каждой строки\n",
+        "queens = [Int(f'q_{i}') for i in range(8)]\n",
+        "\n",
+        "solver = Solver()\n",
+        "\n",
+        "# Каждая переменная — целое от 0 до 7 (столбец)\n",
+        "solver.add([And(q >= 0, q < 8) for q in queens])\n",
+        "\n",
+        "# Все ферзи должны стоять в разных столбцах\n",
+        "solver.add(Distinct(queens))\n",
+        "\n",
+        "# Ни один ферзь не должен бить другого по диагонали\n",
+        "for i in range(8):\n",
+        "    for j in range(i + 1, 8):\n",
+        "        solver.add(queens[i] != queens[j])                     # уже учтено в Distinct\n",
+        "        solver.add(Abs(queens[i] - queens[j]) != j - i)       # диагонали\n",
+        "\n",
+        "# Решение\n",
+        "if solver.check() == sat:\n",
+        "    model = solver.model()\n",
+        "    result = [model.evaluate(q).as_long() for q in queens]\n",
+        "    print(\"Решение (индексы столбцов для строк 0–7):\", result)\n",
+        "else:\n",
+        "    print(\"Решения нет\")\n"
+      ],
+      "metadata": {
+        "id": "NUWALYMNA1Ol"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 7.2. Вторая задачка по физике\n",
+        "\n",
+        "Мотоциклист стоит на светофоре. Как только загорается зелёный, он стартует с места с ускорением 6 м/с^2 на протяжении 4,1 секунды. Определите расстояние, которое мотоцикл преодолеет за это время.\n"
+      ],
+      "metadata": {
+        "id": "wLG6g-jlBJaU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from z3 import *\n",
+        "\n",
+        "t = Real('t')\n",
+        "s = Real('s')\n",
+        "a = 6  # ускорение\n",
+        "eq = s == 0.5 * a * t * t\n",
+        "\n",
+        "solver = Solver()\n",
+        "solver.add(eq, t == 4.1)\n",
+        "\n",
+        "if solver.check() == sat:\n",
+        "    m = solver.model()\n",
+        "    print(m[s].as_decimal(5))  # 5 знаков после запятой\n"
+      ],
+      "metadata": {
+        "id": "sGNO7gZZBJF-"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
