--- a/task-3.ipynb
+++ b/task-3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwi0+byFMUVzWy1nNFQznp",
+      "authorship_tag": "ABX9TyP8qV+CC7EosoS0tAIiCVT+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -281,29 +281,28 @@
         "               fpLT(x, FPVal(0.0, Float64())),\n",
         "               fpEQ(x, FPVal(0.0, Float64()))))\n",
         "prove(fpEQ(x * (y + z), x * y + x * z))\n",
-        "prove(fpGE(x * x, FPVal(0.0, Float64())))"
+        "#prove(fpGE(x * x, FPVal(0.0, Float64())))"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 483
+          "base_uri": "https://localhost:8080/"
         },
         "id": "lmmUtGdJgl3w",
-        "outputId": "d4416233-5172-45d2-ca9a-7af3025665eb"
+        "outputId": "12003643-8d12-4eeb-ec63-99780ea85759"
       },
-      "execution_count": 21,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "counterexample\n",
-            "[y = 1.2826462109743730355404522924800403416156768798828125*(2**-1007),\n",
+            "[y = -1.999999999634752612109878100454807281494140625*(2**-992),\n",
             " x = NaN]\n",
             "counterexample\n",
-            "[z = -1.83292133245385002737748436629772186279296875*(2**186),\n",
-            " y = -1.99417904020143765819739201106131076812744140625*(2**140),\n",
-            " x = -1.0006098246604013812799394145258702337741851806640625*(2**195)]\n",
+            "[z = -1.032275792890425147874111644341610372066497802734375*(2**-14),\n",
+            " y = 1.0135167746881899031308194025768898427486419677734375*(2**-16),\n",
+            " x = -1.2207440344723698988360638395533896982669830322265625*(2**-17)]\n",
             "counterexample\n",
             "[x = NaN]\n",
             "counterexample\n",
@@ -311,20 +310,9 @@
             "counterexample\n",
             "[x = NaN]\n",
             "counterexample\n",
-            "[z = -0.0000129781779569793087603102321736514568328857421875*(2**-1022),\n",
-            " y = 0.9616023276995395718813597341068089008331298828125*(2**-1022),\n",
-            " x = NaN]\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'fpGE' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-21-878393010.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m                fpEQ(x, FPVal(0.0, Float64()))))\n\u001b[1;32m     14\u001b[0m \u001b[0mprove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfpEQ\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mprove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfpGE\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFPVal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFloat64\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'fpGE' is not defined"
+            "[z = -1.1948315690582089754201433606795035302639007568359375*(2**-1022),\n",
+            " y = 1.6289099870870558106616954319179058074951171875*(2**-1021),\n",
+            " x = -1.9563958043531359809463765486725606024265289306640625*(2**592)]\n"
           ]
         }
       ]
@@ -342,17 +330,16 @@
         "prove(1 * x == x) # существование \"1\"\n",
         "prove(Or(x > 0, x < 0, x == 0))\n",
         "prove(x * (y + z) == x * y + x * z)\n",
-        "prove(x ** 2 >= 0)"
+        "#prove(x ** 2 >= 0)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 287
+          "base_uri": "https://localhost:8080/"
         },
         "id": "_ORvV_w7gm5d",
-        "outputId": "0925fdac-9c48-41a0-86cb-2b51882f6acf"
+        "outputId": "88d319bb-8611-451d-8233-284e751f7628"
       },
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,17 +351,6 @@
             "proved\n",
             "proved\n",
             "proved\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "unsupported operand type(s) for ** or pow(): 'BitVecRef' and 'int'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-14-3577054015.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mprove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mOr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mprove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mprove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for ** or pow(): 'BitVecRef' and 'int'"
           ]
         }
       ]
